Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* no longer complaint about incorrect profiles/categories files.  PMS,
  and people who hate QA suck.


pkgcore 0.7.7.5: Dec 26th, 2011

* pkgcore no longer requires a manifest to exist if the repository uses
  thin-manifests, and there are no distfiles for a pkg.

* removed support for FEATURES=allow-missing-checksums.  Use repository
  metadata/layout.conf use-manifest setting instead.

* complain about incorrect profiles/categories files.

* fix bug in masters handling where eclass lookup order was reversed.

* pinspect subcommand digests was added; this is used for scanning for
  broken manifest/digests in a repository.

* PORTAGE_LOGDIR is supported again.

* pkgcore no longer intermixes python/bash output incorrectly when stdout
  or stderr or the same fd: pmerge -Du @system &> log for example.

* issue #7; add framework for parallelized trigger execution.  Currently
  only splitdebug/stripping uses it, but it has a sizable gain for pkgs
  with many binaries.

* pmaint regen --disable-eclass-preloading is now
  pmaint regen --disable-eclass-caching.

* ctrl-c'ing pmaint regen hang bug is now fixed.

* fix a bug in pmaint regen and friends where if the requested repository
  isn't found, the last examined is used.  Additionally, restore ability
  to specify a repository by location.

* all operation api's now are chained exceptions deriving from
  pkgcore.operations.OperationError; for CLI users, this means we
  display a traceback far less often now.

* pkgcore configuration subsystem now uses chained exceptions.  In
  accessing it, you'll get a ConfigurationError exception (or derivative)
  for any config data errors, or the appropriate exception if you use the
  subsystem incorrectly.  In the process, reporting on errors to the commandline
  is now augmented.


pkgcore 0.7.7.4: Dec 14th, 2011

* pkgcore now requires snakeoil 0.4.6 and higher.